Match CORS config with WorldCupPredictions - use setAllowedOrigins and allow all headers